builder and factory patterns

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(Executable main.cc)
-target_link_libraries(Executable PUBLIC SingleResponsibility OpenClosed LiskovSubstitution DependencyInversion)
+target_link_libraries(Executable PUBLIC SingleResponsibility OpenClosed LiskovSubstitution DependencyInversion Builder)
